--- a/budgetmanager/src/main/resources/templates/purchaselist.html
+++ b/budgetmanager/src/main/resources/templates/purchaselist.html
@@ -23,12 +23,54 @@
         .add-purchase-button:hover {
             background-color: #0056b3; /* Darker color on hover */
         }
+        .button-container {
+            margin-top: 20px;
+        }
+        
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+        .button-container {
+            margin-top: 30px;
+        }
+        
+        .button {
+            display: inline-block;
+            padding: 15px 30px;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 8px;
+            margin-right: 20px;
+        }
+        
+        .change-budget-button {
+            background-color: #8a2be2; /* Violet */
+        }
+        
+        .budget-history-button {
+            background-color: #ffd700; /* Yellow */
+        }
+        
+        .button:hover {
+            opacity: 0.8;
+        }
     </style>
 </head>
 <body>
 <div class="budget-container">
     <h1>Budget: <span th:text="${budget.amount}"></span></h1>
-    <a th:href="@{/addbudget}" class="add-budget-button">Change the Budget</a> 
+    <a th:href="@{/addbudget}" class="button change-budget-button">Change Budget</a>
+    <a th:href="@{/budgethistory}" class="button budget-history-button">Budget History</a>
 </div>
 	<h1>Purchases</h1>
 	<table class="table table-striped">
