saving purchase function is fixed

--- a/budgetmanager/src/main/resources/templates/addbudget.html
+++ b/budgetmanager/src/main/resources/templates/addbudget.html
@@ -16,16 +16,16 @@
                         <input type="text" id="name" th:field="*{name}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="month">Month</label>
-                        <input type="number"  id="month" th:field="*{month}" class="form-control" />
+                        <label for="totalAmount">Amount</label>
+                        <input type="number" id="totalAmount" th:field="*{totalAmount}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="year">Year</label>
-                        <input type="number" id="year" th:field="*{year}" class="form-control" />
+                        <label for="startDate">Start Date</label>
+                        <input type="date" id="startDate" th:field="*{startDate}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="amount">Amount</label>
-                        <input type="number" id="amount" th:field="*{amount}" class="form-control" />
+                        <label for="endDate">End Date</label>
+                        <input type="date" id="endDate" th:field="*{endDate}" class="form-control" />
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
