--- a/budgetmanager/src/main/resources/templates/addincome.html
+++ b/budgetmanager/src/main/resources/templates/addincome.html
@@ -1,35 +1,32 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
-    <title>Add Purchase</title>
+    <title>Add new income</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
     <div class="container">
-        <h1>Add Purchase</h1>
+        <h1>Add new income</h1>
         <div class="row">
             <div class="col-md-6">
-                <form th:object="${purchase}" th:action="@{save}" action="#" method="post">
+                <form th:object="${income}" th:action="@{saveincome}" action="#" method="post">
                     <div class="form-group">
-                        <label for="title">Title</label>
-                        <input type="text" id="title" th:field="*{title}" class="form-control" />
+                        <label for="name">Name</label>
+                        <input type="text" id="name" th:field="*{name}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="price">Price</label>
-                        <input type="number" th:field="*{price}" class="form-control" />
+                        <label for="month">Month</label>
+                        <input type="number"  id="month" th:field="*{month}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="place">Place</label>
-                        <input type="text" id="place" th:field="*{place}" class="form-control" />
+                        <label for="year">Year</label>
+                        <input type="number" id="year" th:field="*{year}" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label for="catlist">Category</label>
-                        <select id="catlist" th:field="*{category}" class="form-control">
-                            <option th:each="category : ${categories}" th:value="${category.categoryid}" th:text="${category.name}"></option>
-                        </select>
+                        <label for="amount">Amount</label>
+                        <input type="number" id="amount" th:field="*{amount}" class="form-control" />
                     </div>
-
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
             </div>
